fixed z-index for map title

--- a/medical/matanity/geo-graphical-analysis/index.css
+++ b/medical/matanity/geo-graphical-analysis/index.css
@@ -20,6 +20,7 @@ html {
     width: 320px;
     height: 480px;
     overflow-y: scroll;
+    z-index: 20;
 }
 
 #title-header {
